k8s/overlays/prod/backend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supportflow-backend
  namespace: supportflow
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: backend
          image: ghcr.io/mejrioussama/supportflow-backend:sha-b3e98624c751d0b4c903f37c63d89c3747873a1e
