k8s/overlays/prod/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supportflow-frontend
  namespace: supportflow
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: frontend
          image: ghcr.io/mejrioussama/supportflow-frontend:sha-b3e98624c751d0b4c903f37c63d89c3747873a1e
